IntelliJ static code analysis